--- a/Pages/timeline-english.html
+++ b/Pages/timeline-english.html
@@ -200,6 +200,9 @@
           <div class="timeline">
             <div class="container container-timeline">
               <div class="timeline-education-container">
+                <div class="h3-title">
+                  <h3>Education</h3>
+                </div>
                 <ul>
                   <li class="timeline-item education-li-item">
                     <div class="titles-wrapper">
@@ -338,6 +341,9 @@
                 </ul>
               </div>
               <div class="timeline-work-experience-container">
+                <div class="h3-title">
+                  <h3>Experience</h3>
+                </div>
                 <ul>
                   <li class="timeline-item work-experience-li-item">
                     <div class="titles-wrapper">
