--- a/Pages/timeline-german.html
+++ b/Pages/timeline-german.html
@@ -200,6 +200,10 @@
           <div class="timeline">
             <div class="container container-timeline">
               <div class="timeline-education-container">
+                <div class="h3-title">
+                  <h3>Ausbildung</h3>
+                </div>
+
                 <ul>
                   <li class="timeline-item education-li-item">
                     <div class="titles-wrapper">
@@ -340,6 +344,9 @@
                 </ul>
               </div>
               <div class="timeline-work-experience-container">
+                <div class="h3-title">
+                  <h3>Erfahrung</h3>
+                </div>
                 <ul>
                   <li class="timeline-item work-experience-li-item">
                     <div class="titles-wrapper">
