--- a/Pages/resumeMobile-german.html
+++ b/Pages/resumeMobile-german.html
@@ -156,7 +156,8 @@
 
     <!-- Link to the Schema.js file -->
     <script src="../Scripts/schema.js" defer></script>
-
+    <!-- Include the reCAPTCHA Script -->
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- Page title -->
     <title id="resume-mobile-german">Kathrin Peled - Lebenslauf</title>
 
@@ -821,6 +822,12 @@
                     required
                     aria-label="Your Message"
                   ></textarea>
+                  <br />
+                  <div
+                    class="g-recaptcha"
+                    data-sitekey="6LcwU3wqAAAAAPbr3mc-eyMWdA5wdIZ84DPmtEvF"
+                  ></div>
+                  <br />
                   <input
                     type="submit"
                     class="btn"
