--- a/index.html
+++ b/index.html
@@ -709,6 +709,7 @@
     <script src="./Scripts/script.js" async></script>
     <script src="./Scripts/Cursor.js" async></script>
     <script src="./Scripts/dropdown-menu.js"></script>
+    <script src="./Scripts/contactLinkRediretion.js"></script>
     <!-- <script src="./Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
