--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en" data-page="contact english">
   <head>
@@ -695,6 +694,7 @@
                   href="../Files/Contact-Card.vcf"
                   download
                   aria-labelledby="contact-title"
+                  data-file="vcfFile"
                 >
                   <button
                     id="vcfDownloadBtn"
@@ -704,6 +704,13 @@
                   </button>
                 </a>
               </div>
+              <!-- reCAPTCHA -->
+              <!-- <div class="recaptcha-container">
+                <div
+                  class="g-recaptcha"
+                  data-sitekey="6LcwU3wqAAAAAPbr3mc-eyMWdA5wdIZ84DPmtEvF"
+                ></div>
+              </div> -->
               <div class="h3-title">
                 <h3 id="business-card-title">Save My Business Card</h3>
               </div>
@@ -762,8 +769,6 @@
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js"></script>
-    <script src="../Scripts/verifyCaptcha.js" defer></script>
-    <script src="../Scripts/contactVerifyCaptcha.js" defer></script>
 
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
