--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -191,12 +191,12 @@
             <h2 id="download-files-title">Download my documents</h2>
           </div>
           <!-- reCAPTCHA -->
-          <div class="recaptcha-container">
+          <!-- <div class="recaptcha-container">
             <div
               class="g-recaptcha"
               data-sitekey="6LcwU3wqAAAAAPbr3mc-eyMWdA5wdIZ84DPmtEvF"
             ></div>
-          </div>
+          </div> -->
           <div class="all-files">
             <div class="file-item">
               <div class="file-title">
@@ -210,7 +210,6 @@
                 href="../Files/Kathrin_Peled_Resume_10.2024.pdf"
                 aria-label="Download my extended resume in English"
                 download
-                class="disabled-link"
                 data-file="resume-full"
               >
                 <div class="button-div">
@@ -230,7 +229,6 @@
                 href="../Files/Kathrin Peled Professional Resume.pdf"
                 aria-label="Download my professional resume in English"
                 download
-                class="disabled-link"
                 data-file="resume-prof"
               >
                 <div class="button-div">
@@ -250,7 +248,6 @@
                 href="../Files/Kathrin Peled Lebenslauf - Deutsch.pdf"
                 aria-label="Download my professional resume in German"
                 download
-                class="disabled-link"
                 data-file="resume-german"
               >
                 <div class="button-div">
@@ -270,7 +267,6 @@
                 href="../Files/Diplom Übersetzung 2023.pdf"
                 aria-label="Download my Diplom in German"
                 download
-                class="disabled-link"
                 data-file="diplom"
               >
                 <div class="button-div">
@@ -281,7 +277,6 @@
           </div>
         </div>
         <!-- Link to external JS file -->
-        <script src="../Scripts/verifyCaptcha.js" defer></script>
       </section>
       <!-- ^languages switcher -->
       <div class="languages" id="language-switcher"></div>
