--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -192,12 +192,12 @@
             <h2 id="download-files-title">Lade Meine Dateien Herunter</h2>
           </div>
           <!-- reCAPTCHA -->
-          <div class="recaptcha-container">
+          <!-- <div class="recaptcha-container">
             <div
               class="g-recaptcha"
               data-sitekey="6LcwU3wqAAAAAPbr3mc-eyMWdA5wdIZ84DPmtEvF"
             ></div>
-          </div>
+          </div> -->
           <div class="all-files">
             <div class="file-item">
               <div class="file-title">
@@ -213,7 +213,6 @@
                 href="../Files/Kathrin_Peled_Resume_10.2024.pdf"
                 aria-label="Download my extended resume in English"
                 download
-                class="disabled-link"
                 data-file="resume-full"
               >
                 <div class="button-div">
@@ -235,7 +234,6 @@
                 href="../Files/Kathrin Peled Professional Resume.pdf"
                 aria-label="Download my professional resume in English"
                 download
-                class="disabled-link"
                 data-file="resume-prof"
               >
                 <div class="button-div">
@@ -257,7 +255,6 @@
                 href="../Files/Kathrin Peled Lebenslauf - Deutsch.pdf"
                 aria-label="Download my professional resume in German"
                 download
-                class="disabled-link"
                 data-file="resume-german"
               >
                 <div class="button-div">
@@ -277,7 +274,6 @@
                 href="../Files/Diplom Übersetzung 2023.pdf"
                 aria-label="Download my Diplom in German"
                 download
-                class="disabled-link"
                 data-file="diplom"
               >
                 <div class="button-div">
@@ -288,7 +284,6 @@
           </div>
         </div>
         <!-- Link to external JS file -->
-        <script src="../Scripts/verifyCaptcha.js" defer></script>
       </section>
       <!-- ^languages switcher -->
       <div class="languages" id="language-switcher"></div>
