--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="de" data-page="contact german">
   <head>
@@ -116,8 +115,6 @@
       src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"
       async
     ></script>
-    <!-- Include the reCAPTCHA Script -->
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <!-- Additional stylesheet for Boxicons -->
     <link
       href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
@@ -186,6 +183,12 @@
           <div class="h2-title">
             <h2 id="contact-heading">Kontaktiere mich</h2>
           </div>
+          <!-- hCaptcha Widget -->
+          <div
+            class="h-captcha"
+            data-sitekey="dcdc9a0c-5254-49ae-9f30-7508f1f05aac"
+            data-callback="onCaptchaSuccess"
+          ></div>
           <div class="contact-options-divs">
             <div class="contact-form">
               <div class="container">
@@ -226,12 +229,6 @@
                       aria-required="true"
                       placeholder="Ihre Nachricht"
                     ></textarea>
-                    <br />
-                    <div
-                      class="g-recaptcha"
-                      data-sitekey="6LcwU3wqAAAAAPbr3mc-eyMWdA5wdIZ84DPmtEvF"
-                    ></div>
-                    <br />
                     <button type="submit" aria-label="Send your message">
                       Senden
                     </button>
@@ -743,6 +740,8 @@
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js"></script>
+    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
+    <script src="../Scripts/hCaptcha.js"></script>
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
