--- a/Pages/resumeMobile-german.html
+++ b/Pages/resumeMobile-german.html
@@ -156,8 +156,7 @@
 
     <!-- Link to the Schema.js file -->
     <script src="../Scripts/schema.js" defer></script>
-    <!-- Include the reCAPTCHA Script -->
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
     <!-- Page title -->
     <title id="resume-mobile-german">Kathrin Peled - Lebenslauf</title>
 
@@ -191,6 +190,12 @@
             <div class="h2-title">
               <h2 id="resume-document">Mein Lebenslauf</h2>
             </div>
+            <!-- hCaptcha Widget -->
+            <div
+              class="h-captcha"
+              data-sitekey="dcdc9a0c-5254-49ae-9f30-7508f1f05aac"
+              data-callback="onCaptchaSuccess"
+            ></div>
           </div>
           <div class="book">
             <!-- page 0 -->
@@ -822,12 +827,6 @@
                     required
                     aria-label="Your Message"
                   ></textarea>
-                  <br />
-                  <div
-                    class="g-recaptcha"
-                    data-sitekey="6LcwU3wqAAAAAPbr3mc-eyMWdA5wdIZ84DPmtEvF"
-                  ></div>
-                  <br />
                   <input
                     type="submit"
                     class="btn"
@@ -868,6 +867,8 @@
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js"></script>
+    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
+    <script src="../Scripts/hCaptcha.js"></script>
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
