--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -155,8 +155,7 @@
 
     <!-- Link to the Schema.js file for structured data -->
     <script src="../Scripts/schema.js" defer></script>
-    <!-- Include the reCAPTCHA Script -->
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
     <!-- Page title -->
     <title id="resume-english">Kathrin Peled - Resume</title>
 
@@ -185,6 +184,12 @@
     >
       <div class="container">
         <div class="h2-title"><h2 id="resume-book">My Resume</h2></div>
+        <!-- hCaptcha Widget -->
+        <div
+          class="h-captcha"
+          data-sitekey="dcdc9a0c-5254-49ae-9f30-7508f1f05aac"
+          data-callback="onCaptchaSuccess"
+        ></div>
         <div class="wrapper">
           <div class="cover cover-left" aria-hidden="true"></div>
           <div class="cover cover-right" aria-hidden="true"></div>
@@ -826,9 +831,6 @@
                       required
                       aria-label="Your Message"
                     ></textarea>
-                    <br>
-                    <div class="g-recaptcha" data-sitekey="6LcwU3wqAAAAAPbr3mc-eyMWdA5wdIZ84DPmtEvF"></div>
-                    <br>
                     <input
                       type="submit"
                       class="btn"
@@ -877,6 +879,8 @@
     <script src="../Scripts/transfer-resume.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js"></script>
+    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
+    <script src="../Scripts/hCaptcha.js"></script>
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
