--- a/Pages/resumeMobile-english.html
+++ b/Pages/resumeMobile-english.html
@@ -149,8 +149,7 @@
 
     <!-- Link to the Schema.js file for structured data -->
     <script src="../Scripts/schema.js" defer></script>
-    <!-- Include the reCAPTCHA Script -->
-    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
     <!-- Title of the document -->
     <title id="resume-mobile-english">Kathrin Peled - Resume</title>
 
@@ -183,6 +182,12 @@
             <div class="h2-title">
               <h2 id="resume-document">My Resume</h2>
             </div>
+                <!-- hCaptcha Widget -->
+          <div
+          class="h-captcha"
+          data-sitekey="dcdc9a0c-5254-49ae-9f30-7508f1f05aac"
+          data-callback="onCaptchaSuccess"
+        ></div>
           </div>
           <div class="book">
             <!-- page 0 -->
@@ -808,12 +813,6 @@
                     required
                     aria-label="Your Message"
                   ></textarea>
-                  <br />
-                  <div
-                    class="g-recaptcha"
-                    data-sitekey="6LcwU3wqAAAAAPbr3mc-eyMWdA5wdIZ84DPmtEvF"
-                  ></div>
-                  <br />
                   <input
                     type="submit"
                     class="btn"
@@ -854,6 +853,8 @@
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
     <script src="../Scripts/dropdown-menu.js"></script>
+    <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
+    <script src="../Scripts/hCaptcha.js"></script>
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
