Sticky note for h-captcha

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -191,6 +191,9 @@
             <h2 id="contact-heading">Contact Me</h2>
           </div>
           <!-- hCaptcha Widget -->
+          <div id="sticky-note" class="sticky-note">
+            <p>Please verify you're human (at the top) to access all links and buttons.</p>
+          </div>
           <div
             class="h-captcha"
             data-sitekey="dcdc9a0c-5254-49ae-9f30-7508f1f05aac"
@@ -754,6 +757,7 @@
     <script src="../Scripts/dropdown-menu.js"></script>
     <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
     <script src="../Scripts/hCaptcha.js"></script>
+    <script src="../Scripts/captchaNote.js" async></script>
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
