--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -184,6 +184,12 @@
             <h2 id="contact-heading">Kontaktiere mich</h2>
           </div>
           <!-- hCaptcha Widget -->
+          <div id="sticky-note" class="sticky-note">
+            <p>
+              Bitte bestätigen Sie oben, dass Sie ein Mensch sind, um vollen
+              Zugriff auf die Links und Schaltflächen zu erhalten.
+            </p>
+          </div>
           <div
             class="h-captcha"
             data-sitekey="dcdc9a0c-5254-49ae-9f30-7508f1f05aac"
@@ -742,6 +748,8 @@
     <script src="../Scripts/dropdown-menu.js"></script>
     <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
     <script src="../Scripts/hCaptcha.js"></script>
+    <script src="../Scripts/captchaNote.js" async></script>
+
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
