--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -192,7 +192,10 @@
           </div>
           <!-- hCaptcha Widget -->
           <div id="sticky-note" class="sticky-note">
-            <p>Please verify you're human (at the top) to access all links and buttons.</p>
+            <p>
+              Please verify you're human (at the top) to access all links and
+              buttons.
+            </p>
           </div>
           <div
             class="h-captcha"
@@ -709,12 +712,12 @@
               </div>
               <div class="business-card">
                 <a
-                  href="../Files/Email-Signature.png"
+                  href="../Files/Visit-Card.jpg"
                   download="Kathrin Peled Card.png"
                   aria-labelledby="business-card-title"
                 >
                   <img
-                    src="../Files/Email-Signature.png"
+                    src="../Files/Visit-Card.jpg"
                     alt="Email-Signature business card for Kathrin Peled"
                     role="img"
                   />
@@ -758,6 +761,8 @@
     <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
     <script src="../Scripts/hCaptcha.js"></script>
     <script src="../Scripts/captchaNote.js" async></script>
+    <script src="../Scripts/checkLinks.js" defer></script>
+
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
