--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -205,19 +205,17 @@
           <div class="all-files">
             <div class="file-item">
               <div class="file-title">
-                <h3 title="Vollständiger Lebenslauf auf Englisch">
-                  Lebenslauf 🇬🇧
-                </h3>
+                <h3 title="Translated to German">Orientierungskurs 🇩🇪</h3>
               </div>
               <img
-                src="../Files-Images/IMG CV Full resume.webp"
-                alt="Image of full resume"
+                src="../Files-Images/IMG-Orientations-Couse-DCI.webp"
+                alt="Image of certification DCI"
               />
               <a
-                href="../Files/Kathrin_Peled_Resume_10.2024.pdf"
-                aria-label="Download my extended resume in English"
+                href="../Files/IMG-Orientations-Couse-DCI.webp"
+                aria-label="Download my Orientation Couse in English and German"
                 download
-                data-file="resume-full"
+                data-file="Orientation Couse"
               >
                 <div class="button-div">
                   <button>Herunterladen</button>
@@ -316,6 +314,7 @@
     <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
     <script src="../Scripts/hCaptcha.js"></script>
     <script src="../Scripts/captchaNote.js" async></script>
+    <script src="../Scripts/checkLinks.js" defer></script>
 
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
