--- a/Pages/resume-english.html
+++ b/Pages/resume-english.html
@@ -885,6 +885,8 @@
     <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
     <script src="../Scripts/hCaptcha.js"></script>
     <script src="../Scripts/captchaNote.js" async></script>
+    <script src="../Scripts/checkLinks.js" defer></script>
+
 
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
