--- a/Pages/sitemap.html
+++ b/Pages/sitemap.html
@@ -366,6 +366,8 @@
     </main>
     <script src="../Scripts/script.js" async></script>
     <script src="../Scripts/Cursor.js" async></script>
+    <script src="../Scripts/checkLinks.js" defer></script>
+
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
     <!-- Async or defer for external scripts -->
 
