--- a/Pages/timeline-english.html
+++ b/Pages/timeline-english.html
@@ -632,6 +632,8 @@
     <script src="../Scripts/dropdown-menu.js"></script>
     <script src="../Scripts/transfer-resume.js"></script>
     <script src="../Scripts/timeline-filter.js"></script>
+    <script src="../Scripts/checkLinks.js" defer></script>
+
 
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
