--- a/index-german.html
+++ b/index-german.html
@@ -723,6 +723,8 @@
     <script src="./Scripts/script.js" async></script>
     <script src="./Scripts/Cursor.js" async></script>
     <script src="./Scripts/dropdown-menu.js"></script>
+    <script src="./Scripts/checkLinks.js" defer></script>
+
     <!-- <script src="./Scripts/sharing-toggle.js" async></script> -->
 
     <!-- Async or defer for external scripts -->
