--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -699,12 +699,12 @@
               </div>
               <div class="business-card">
                 <a
-                  href="../Files/Email-Signature.png"
+                  href="../Files/Visit-Card.jpg"
                   download="Kathrin Peled Card.png"
                   aria-labelledby="business-card-title"
                 >
                   <img
-                    src="../Files/Email-Signature.png"
+                    src="../Files/Visit-Card.jpg"
                     alt="Email-Signature business card for Kathrin Peled"
                     role="img"
                   />
@@ -749,6 +749,8 @@
     <script src="https://js.hcaptcha.com/1/api.js" async defer></script>
     <script src="../Scripts/hCaptcha.js"></script>
     <script src="../Scripts/captchaNote.js" async></script>
+    <script src="../Scripts/checkLinks.js" defer></script>
+
 
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
