--- a/Pages/timeline-german.html
+++ b/Pages/timeline-german.html
@@ -627,6 +627,7 @@
     <script src="../Scripts/dropdown-menu.js"></script>
     <script src="../Scripts/transfer-resume.js"></script>
     <script src="../Scripts/timeline-filter.js"></script>
+    <script src="../Scripts/checkLinks.js" defer></script>
 
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
