changes and corrections

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -713,7 +713,7 @@
               <div class="business-card">
                 <a
                   href="../Files/Visit-Card.jpg"
-                  download="Kathrin Peled Card.png"
+                  download="Kathrin Peled Card.jpg"
                   aria-labelledby="business-card-title"
                 >
                   <img
