--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -700,7 +700,7 @@
               <div class="business-card">
                 <a
                   href="../Files/Visit-Card.jpg"
-                  download="Kathrin Peled Card.png"
+                  download="Kathrin Peled Card.jpg"
                   aria-labelledby="business-card-title"
                 >
                   <img
@@ -750,7 +750,6 @@
     <script src="../Scripts/hCaptcha.js"></script>
     <script src="../Scripts/captchaNote.js" async></script>
     <script src="../Scripts/checkLinks.js" defer></script>
-
 
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
