Disable Jekyll on GitHub Pages

--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
                 <span id="work-experience-summary" class="title-span"
                   >Work Experience Summary</span
                 >
-                I’ve built a diverse background in customer support 1234, sales, and
+                I’ve built a diverse background in customer support, sales, and
                 data analysis, which has given me valuable insights into what
                 users need and how to meet those needs effectively. <br />
 
