--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <link rel="canonical" href="https://draculady.de/index.html" />
 
     <!-- Preload Font Awesome stylesheet -->
-    <link
+    <!-- <link
       rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
       as="style"
@@ -81,7 +81,7 @@
         crossorigin="anonymous"
         referrerpolicy="no-referrer"
       />
-    </noscript>
+    </noscript> -->
 
     <!-- Preload Boxicons stylesheet -->
     <link
@@ -126,6 +126,8 @@
     <!-- Link to custom stylesheet -->
     <link rel="stylesheet" href="./Styles/style.css" />
     <!-- <link rel="stylesheet" href="./Styles/sharingToggle.css" /> -->
+    <link rel="stylesheet" href="./Styles/fontawesome.min.css" />
+    <link rel="stylesheet" href="./Styles/all.min.css" />
 
     <!-- Google Analytics tag -->
     <script
