fontawsome without cdn

--- a/Pages/contact-english.html
+++ b/Pages/contact-english.html
@@ -58,32 +58,12 @@
       href="https://draculady.de/Pages/contact-english.html"
       hreflang="x-default"
     />
-    <!-- Preloading Font Awesome and handling loading -->
-    <link
-      rel="preload"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
 
     <!-- Canonical link for SEO -->
     <link
       rel="canonical"
       href="https://draculady.de/Pages/contact-english.html"
     />
-
-    <!-- Fallback stylesheet for Font Awesome in case JavaScript is disabled -->
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      />
-    </noscript>
 
     <!-- Preloading Boxicons stylesheet -->
     <link
@@ -116,12 +96,6 @@
     <!-- Page title -->
     <title id="contact-english">Kathrin Peled - contact</title>
 
-    <!-- Additional stylesheets -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
-
     <!-- ? ShareThis script -->
     <!-- <script
       type="text/javascript"
@@ -132,6 +106,8 @@
     <!-- Preload and link to the main stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
+        <!-- Preload Font Awesome stylesheet -->
+        <link rel="stylesheet" href="../Styles/all.min.css" />
     <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
     <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
