--- a/Pages/contact-german.html
+++ b/Pages/contact-german.html
@@ -66,25 +66,6 @@
       href="https://draculady.de/Pages/contact-german.html"
     />
 
-    <!-- Preloading Font Awesome stylesheet -->
-    <link
-      rel="preload"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      />
-    </noscript>
-
     <!-- Preloading Boxicons stylesheet -->
     <link
       rel="preload"
@@ -121,6 +102,8 @@
     <!-- Preloading main stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <link rel="stylesheet" href="../Styles/style.css" />
+        <!-- Preload Font Awesome stylesheet -->
+        <link rel="stylesheet" href="../Styles/all.min.css" />
     <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" />
     <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
