--- a/Pages/timeline-english.html
+++ b/Pages/timeline-english.html
@@ -67,26 +67,6 @@
       href="https://draculady.de/Pages/timeline-english.html"
     />
 
-    <!-- Preloading Font Awesome stylesheet for performance -->
-    <link
-      rel="preload"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      />
-    </noscript>
-
-
     <!-- ? ShareThis script -->
     <!-- <script
       type="text/javascript"
@@ -99,6 +79,8 @@
     <link rel="stylesheet" href="../Styles/style.css" />
     <link rel="preload" href="../Styles/mobileResume.css" as="style" />
     <link rel="stylesheet" href="../Styles/mobileResume.css" />
+            <!-- Preload Font Awesome stylesheet -->
+            <link rel="stylesheet" href="../Styles/all.min.css" />
     <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" /> -->
     <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
