--- a/Pages/files-english.html
+++ b/Pages/files-english.html
@@ -65,26 +65,6 @@
       rel="canonical"
       href="https://draculady.de/Pages/files-english.html"
     />
-    <!-- Preload Font Awesome styles -->
-    <link
-      rel="preload"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-
-    <noscript>
-      <!-- Fallback for Font Awesome if JavaScript is disabled -->
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      />
-    </noscript>
 
     <!-- Link to the Schema.js file -->
     <script src="../Scripts/schema.js" defer></script>
@@ -99,7 +79,8 @@
     <!-- Preload and link to the main stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" /> -->
-
+        <!-- Preload Font Awesome stylesheet -->
+        <link rel="stylesheet" href="../Styles/all.min.css" />
     <link rel="stylesheet" href="../Styles/style.css" />
     <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
