--- a/Pages/files-german.html
+++ b/Pages/files-german.html
@@ -64,28 +64,6 @@
     <!-- Canonical link for SEO -->
     <link rel="canonical" href="https://draculady.de/Pages/files-german.html" />
 
-    <!-- Preload Font Awesome stylesheet for better performance -->
-    <link
-      rel="preload"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-
-    <!-- Fallback for users with JavaScript disabled -->
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      />
-    </noscript>
-
-
     <!-- ? ShareThis script -->
     <!-- <script
       type="text/javascript"
@@ -96,7 +74,8 @@
     <!-- Preload custom stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" /> -->
-
+        <!-- Preload Font Awesome stylesheet -->
+        <link rel="stylesheet" href="../Styles/all.min.css" />
     <!-- Link to custom stylesheet -->
     <link rel="stylesheet" href="../Styles/style.css" />
     <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
