--- a/Pages/portfolio-german.html
+++ b/Pages/portfolio-german.html
@@ -67,27 +67,6 @@
       href="https://draculady.de/Pages/portfolio-german.html"
     />
 
-    <!-- Preload Font Awesome CSS for faster rendering -->
-    <link
-      rel="preload"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-
-    <!-- Fallback for browsers with JavaScript disabled -->
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      />
-    </noscript>
-
     <!-- ? ShareThis script -->
     <!-- <script
       type="text/javascript"
@@ -98,7 +77,8 @@
     <!-- Preload custom stylesheet -->
     <link rel="preload" href="../Styles/style.css" as="style" />
     <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" /> -->
-
+        <!-- Preload Font Awesome stylesheet -->
+        <link rel="stylesheet" href="../Styles/all.min.css" />
     <!-- Custom stylesheet for the portfolio -->
     <link rel="stylesheet" href="../Styles/style.css" />
     <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
