--- a/Pages/resume-german.html
+++ b/Pages/resume-german.html
@@ -65,26 +65,6 @@
       href="https://draculady.de/Pages/resume-german.html"
     />
 
-    <!-- Preload Font Awesome CSS -->
-    <link
-      rel="preload"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <noscript>
-      <!-- Fallback for users with JavaScript disabled -->
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      />
-    </noscript>
-
     <!-- Preload Boxicons CSS -->
     <link
       rel="preload"
@@ -122,6 +102,8 @@
     <!-- Preload resume-specific stylesheet -->
     <link rel="preload" href="../Styles/style_resume.css" as="style" />
     <link rel="stylesheet" href="../Styles/style_resume.css" />
+            <!-- Preload Font Awesome stylesheet -->
+            <link rel="stylesheet" href="../Styles/all.min.css" />
 
     <!-- Google Tag Manager for analytics -->
     <script
