--- a/Pages/resumeMobile-german.html
+++ b/Pages/resumeMobile-german.html
@@ -67,27 +67,6 @@
       href="https://draculady.de/Pages/resume-mobile-german.html"
     />
 
-    <!-- Preload Font Awesome stylesheet -->
-    <link
-      rel="preload"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-
-    <noscript>
-      <!-- Fallback for Font Awesome stylesheet if JavaScript is disabled -->
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      />
-    </noscript>
-
     <!-- Preload Boxicons stylesheet -->
     <link
       rel="preload"
@@ -125,6 +104,8 @@
     <link rel="stylesheet" href="../Styles/style.css" />
     <link rel="preload" href="../Styles/mobileResume.css" as="style" />
     <link rel="stylesheet" href="../Styles/mobileResume.css" />
+    <!-- Preload Font Awesome stylesheet -->
+    <link rel="stylesheet" href="../Styles/all.min.css" />
     <!-- <link rel="preload" href="../Styles/sharingToggle.css" as="style" /> -->
     <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
 
@@ -867,7 +848,6 @@
     <script src="../Scripts/hCaptcha.js"></script>
     <script src="../Scripts/captchaNote.js" async></script>
     <script src="../Scripts/checkLinks.js" defer></script>
-
 
     <!-- <script src="../Scripts/sharing-toggle.js" async></script> -->
 
