--- a/Pages/sitemap.html
+++ b/Pages/sitemap.html
@@ -51,29 +51,8 @@
       hreflang="x-default"
     />
 
-    <!-- Preloading Font Awesome and handling loading -->
-    <link
-      rel="preload"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-
     <!-- Canonical link for SEO -->
     <link rel="canonical" href="https://draculady.de/Pages/sitemap.html" />
-
-    <!-- Fallback stylesheet for Font Awesome in case JavaScript is disabled -->
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      />
-    </noscript>
 
     <!-- ? ShareThis script -->
     <!-- <script
@@ -85,13 +64,10 @@
     <!-- Page title -->
     <title>Site Map</title>
 
-    <!-- Additional stylesheets -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
     <link rel="stylesheet" href="../Styles/sitemap.css" />
     <link rel="stylesheet" href="../Styles/style.css" />
+    <!-- Preload Font Awesome stylesheet -->
+    <link rel="stylesheet" href="../Styles/all.min.css" />
     <!-- <link rel="stylesheet" href="../Styles/sharingToggle.css" /> -->
     <!-- Google Analytics tag -->
     <script
