--- a/index-german.html
+++ b/index-german.html
@@ -64,29 +64,8 @@
       hreflang="x-default"
     />
 
-    <!-- Preload Font Awesome stylesheet for faster loading -->
-    <link
-      rel="preload"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-      as="style"
-      onload="this.rel='stylesheet'"
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-
     <!-- Canonical URL for SEO -->
     <link rel="canonical" href="https://draculady.de/index-german.html" />
-
-    <!-- Fallback stylesheet for Font Awesome -->
-    <noscript>
-      <link
-        rel="stylesheet"
-        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
-        integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-      />
-    </noscript>
 
     <!-- Preload Boxicons stylesheet for faster loading -->
     <link
@@ -132,6 +111,8 @@
 
     <!-- Link to custom stylesheet -->
     <link rel="stylesheet" href="./Styles/style.css" />
+    <!-- Preload Font Awesome stylesheet -->
+    <link rel="stylesheet" href="./Styles/all.min.css" />
     <!-- <link rel="stylesheet" href="./Styles/sharingToggle.css" /> -->
 
     <!-- Google Analytics tag -->
